src/test/resources/semantic/reject/tooManyFunctionCallParams2.ul
void main() {
    foo(5);
}

void foo() {
}
